changed the cell color from crimson to white.

--- a/board.css
+++ b/board.css
@@ -27,7 +27,7 @@
 			background-size: contain;
 		}
 		
-		.crimson { 
+		.white { 
 			/*background-color: darkred;*/
 			background-image: url("stormbreaker.jpg");
 			background-size: contain;
