--- a/board.css
+++ b/board.css
@@ -12,12 +12,12 @@
 			/*justify-content: space-evenly;*/
 		} 
 		.cell {
-			width: 8vw;
-			height: 8vw;
+			width: 10vmin;
+			height: 10vmin;
 			display: inline-block;
 			margin: 0px;
-			max-width: 11vh;
-			max-height: 11vh;
+			/*max-width: 11vh;*/
+			/*max-height: 11vh;*/
 			
 		}
 		
@@ -57,6 +57,17 @@
 			
 			
 		}   
+        .selected {
+			margin: 0;
+			border: 1vmin solid red;
+			background-repeat: no-repeat;
+			
+		  			  
+		}
+		
+		
+		
+
 
 
 
